# docassemble-TODI

./: MANIFEST.in  README.md  pyproject.toml  setup.py
docassemble/TODI/: percentage_short_enough.py
docassemble/TODI/data/questions/: transfer_on_death_instrument.yml
docassemble/TODI/data/templates/: todi_docassemble.docx  todi_instructions.docx
