[build-system]
requires = [
    "setuptools==80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.TODI"
version = "1.0.50"
description = "A docassemble extension."
readme = "README.md"
authors = [
    { name = "Vivian McNaughton", email = "vmcnaughton@illinoislegalaid.org" },
]
dependencies = []
license = "MIT"
license-files = [
    "LICENSE",
]

[project.urls]
Homepage = "https://docassemble.org"

[tool.setuptools.packages.find]
where = [
    ".",
]
